# coderio

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_en.md  THIRD_PARTY_LICENSES.md  pyproject.toml  tmp_probe4.py  tmp_probe5.py  tmp_probe6.py
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
.zcode/plans/: plan-sess_508801fc-bea6-466b-8f86-ed96b4758965.md
docs/: coderio-architecture.md  deepagents-integration-poc.md
docs/plans/: 2026-06-16-lion-skills-mvp.md  2026-06-17-lion-skills-plugin-distribution.md
docs/specs/: 2026-06-16-lion-skills-design.md  2026-06-17-lion-skills-plugin-distribution-design.md  2026-06-22-skill-suite-architecture.md
docs/superpowers/plans/: 2026-06-26-coderio-harness-state-control.md
docs/superpowers/specs/: 2026-06-26-coderio-harness-state-control-design.md
scripts/: verify_crew_live.py  verify_deepagent_live.py  verify_harness_live.py
src/coderio/: __init__.py
src/coderio/agent/: __init__.py  compact.py  deep_loop.py  harness.py  harness_middleware.py  loop.py  prompts.py  skill_tool.py  state.py  stream.py
src/coderio/cli/: app.py  commands.py  credentials.py  multimodal.py  onboarding.py  providers.py  render.py  repl.py  skills_cmd.py  stream.py  tui.py
src/coderio/config/: __init__.py  bootstrap.py  loader.py  models.py
src/coderio/crew/: __init__.py  agents.py  cli_cmd.py  orchestrator.py  state.py
src/coderio/llm/: __init__.py  factory.py  probe.py
src/coderio/session/: __init__.py  message.py  store.py
src/coderio/skills/: __init__.py  models.py  parser.py  store.py  triggers.py
src/coderio/skills/bundled/executing-plans/: SKILL.md
src/coderio/skills/lion-skills/: README.md
src/coderio/skills/lion-skills/skills/clarifying-questions/: SKILL.md
src/coderio/skills/lion-skills/skills/clarifying-questions/evals/: evals.json
src/coderio/skills/lion-skills/skills/code-review/: SKILL.md
src/coderio/skills/lion-skills/skills/code-review/evals/: evals.json
src/coderio/skills/lion-skills/skills/commit-message/: SKILL.md
src/coderio/skills/lion-skills/skills/commit-message/evals/: evals.json
src/coderio/skills/lion-skills/skills/debugging/: SKILL.md
src/coderio/skills/lion-skills/skills/debugging/evals/: evals.json
src/coderio/skills/lion-skills/skills/error-handling/: SKILL.md
src/coderio/skills/lion-skills/skills/error-handling/evals/: evals.json
src/coderio/skills/lion-skills/skills/lion-writing-skills/: SKILL.md
src/coderio/skills/lion-skills/skills/lion-writing-skills/evals/: evals.json
src/coderio/skills/lion-skills/skills/naming/: SKILL.md
src/coderio/skills/lion-skills/skills/naming/evals/: evals.json
src/coderio/skills/lion-skills/skills/onboarding-unknown-codebase/: SKILL.md
src/coderio/skills/lion-skills/skills/onboarding-unknown-codebase/evals/: evals.json
src/coderio/skills/lion-skills/skills/spec-writing/: SKILL.md
src/coderio/skills/lion-skills/skills/spec-writing/evals/: evals.json
src/coderio/skills/lion-skills/skills/task-breakdown/: SKILL.md
src/coderio/skills/lion-skills/skills/task-breakdown/evals/: evals.json
src/coderio/skills/lion-skills/skills/testing/: SKILL.md
src/coderio/skills/lion-skills/skills/testing/evals/: evals.json
src/coderio/skills/lion-skills/skills/verify-and-fix/: SKILL.md
src/coderio/skills/lion-skills/skills/verify-and-fix/evals/: evals.json
src/coderio/tools/: __init__.py  base.py  bash.py  edit_file.py  glob_tool.py  grep_tool.py  list_dir.py  multi_edit.py  note.py  permission.py  read_file.py  todo.py  web_fetch.py  web_search.py  workspace.py  write_file.py
temp/: coderio-architecture.md  coderio-optimization-suggestions.md
temp/roguelike/: game.js  index.html
tests/: conftest.py  test_p0_stability.py  test_repl.py
tests/agent/: test_compact.py  test_context_rot.py  test_harness.py  test_harness_middleware.py  test_loop.py  test_prompts.py  test_skill_tool.py  test_state.py
tests/cli/: test_app.py  test_command_menu.py  test_commands.py  test_credentials.py  test_input_isolation.py  test_live_thinking.py  test_multimodal.py  test_onboarding.py  test_providers.py  test_render.py  test_repl_loop.py  test_repl_reset.py  test_skills_cmd.py  test_status_bar.py  test_stream.py  test_truncation.py  test_tui_picker.py  test_ux_features.py
tests/config/: test_bootstrap.py  test_loader.py  test_models.py
tests/crew/: test_agents.py  test_cli_cmd.py  test_graph.py  test_orchestrator.py  test_state.py
tests/e2e/: test_smoke.py
tests/llm/: test_factory.py  test_probe.py
tests/session/: test_message.py  test_store.py
tests/skills/: test_bundled.py  test_parser.py  test_store.py  test_triggers.py
tests/tools/: test_bash.py  test_concrete_gates.py  test_edit_prefix.py  test_file_tools.py  test_list_dir.py  test_multi_edit.py  test_note.py  test_permission.py  test_registry.py  test_search_tools.py  test_todo.py  test_web.py  test_workspace.py
