[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coderio"
version = "0.1.0"
description = "A skill-driven coding agent (S0 core)"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "langchain-anthropic>=0.2",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langchain>=0.3",
    "langgraph>=0.2",
    "deepagents>=0.6",
    "pydantic>=2",
    "rich>=13",
    "textual>=0.40",
    "tomli-w>=1.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
coderio = "coderio.cli.app:main_entry"

[tool.hatch.build.targets.wheel]
packages = ["src/coderio"]

[tool.hatch.build.targets.wheel.force-include]
"src/coderio/skills" = "coderio/skills"
