[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "coderio"
version = "0.1.0"
description = "A skill-driven coding agent — structural harness, foldable thinking TUI, crew orchestration."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
keywords = ["agent", "coding-agent", "llm", "langchain", "langgraph", "textual", "tui", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
]
authors = [
    { name = "coderio contributors" },
]
project-urls = { Homepage = "https://github.com/coderio/coderio", Issues = "https://github.com/coderio/coderio/issues" }
dependencies = [
    "httpx>=0.27",
    "langchain-anthropic>=0.2",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langchain>=0.3",
    "langgraph>=0.2",
    "pydantic>=2",
    "rich>=13",
    "textual>=0.40",
    "tomli-w>=1.0",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8"]
deepagent = ["deepagents>=0.6"]

[project.scripts]
coderio = "coderio.cli.app:main_entry"

[tool.hatch.build.targets.wheel]
packages = ["src/coderio"]

[tool.hatch.build.targets.wheel.force-include]
"src/coderio/skills" = "coderio/skills"
